Added banner to page

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
 				<img class="c-header-logo" src="https://supporters.nordoff-robbins.org.uk/l/917661/2022-09-22/53nkv/917661/1663836094Ucjk9mzC/nr_logo_spacing_colour.png"/>
 			</div>
 
+			<img src="images/banner.jpg" alt="Nordoff Robbins" class="banner">
+
 
 
 			<p class="form-field first_name pd-text required">
